Completed project MVP, ready for launch

--- a/index.html
+++ b/index.html
@@ -7,13 +7,17 @@
         <link rel="stylesheet" type="text/CSS" href="index.css">
     </head>
     <body>
+        <h1>Calculator</h1>
+        <p>Welcome to this online calculator! It operates as you would
+            expect a calculator to operate.</p>
+        <p>If a NaN appears, please hit A/C to resume normal function.</p>
         <div class="calculator">
-            <div class="display"><p class="display-numbers">36987488888889999999999</p></div>
+            <div class="display"><p class="display-numbers">0</p></div>
             <div class="buttons-row nested-flex-container">
                 <div class="button-1"><button>1</button></div>
                 <div class="button-2"><button>2</button></div>
                 <div class="button-3"><button>3</button></div>
-                <div class="button-plus"><button>+</button></div>
+                <div class="button-add"><button>+</button></div>
             </div>
 
             <div class="buttons-row nested-flex-container">
